--- a/CatalogApp/Views/Catalog/Index1.cshtml
+++ b/CatalogApp/Views/Catalog/Index1.cshtml
@@ -41,7 +41,7 @@
                 @Html.DisplayFor(modelItem => item.Quantity)
             </td>
             <td>
-                <img src="@Html.DisplayFor(modelItem => item.ImgPath)" class="img-fluid">
+                <img src="@item.ImgPath)" class="img-fluid">
             </td>
             <td>
                 <a class="btn btn-outline-success" asp-action="Edit" asp-route-id="@item.Id">Редагувати</a>
